--- a/build.yaml
+++ b/build.yaml
@@ -190,4 +190,7 @@ targets:
               output: lib/dart/target-plugins.graphql.dart
             - schema: lib/schema.graphql
               queries_glob: lib/graphql/order.graphql
-              output: lib/dart/order.graphql.dart
+              output: lib/dart/order.graphql.dart            
+            - schema: lib/schema.graphql
+              queries_glob: lib/graphql/tax.graphql
+              output: lib/dart/tax.graphql.dart
