--- a/build.yaml
+++ b/build.yaml
@@ -242,3 +242,6 @@ targets:
             - schema: lib/schema.graphql
               queries_glob: lib/graphql/corporate-internal-product-stock.graphql
               output: lib/dart/corporate-internal-product-stock.graphql.dart
+            - schema: lib/schema.graphql
+              queries_glob: lib/graphql/collaboration-time-track.graphql
+              output: lib/dart/collaboration-time-track.graphql.dart
